# libsystem

./: .gitignore  AUTHORS  Doxyfile  autogen.sh  configure.ac
src/: .gitignore  Makefile.am
src/libsystem/: .gitignore  config-parser.c  config-parser.h  dbus-util.h  exec.c  glib-util.c  glib-util.h  libsystem.c  libsystem.h  libsystem.pc.in  proc-meminfo-lookup.gperf  proc-smaps-lookup.gperf  proc.c  proc.h  time-util.c
src/libsystem-glib/: .gitignore  libsystem-glib.c  libsystem-glib.h  libsystem-glib.pc.in
src/libsystem-sd/: .gitignore  libsystem-sd.pc.in  systemd.c  systemd.h
src/test/: test-cp.c  test-exec.c  test-foreach-glist.c  test-proc-smaps.c  test-read-write.c  test-truncate_nl.c  test.h
